--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ postgres:
   image: postgres:9.4.5
   environment:
     POSTGRES_USER: drkiq
-    POSTGRES_PASSWORD: yourpassword
+    POSTGRES_PASSWORD: Mylabor
   ports:
     - '5433:5432'
   volumes:
