--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 /yarn-error.log
 
 .byebug_history
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
